<resources>
	<string name="app_name">Speaking Chat</string>
	<string name="refresh_token">Get Fresh Token</string>
	<string name="empty_list_broadcast">Live streams not found</string>
	<string name="connect_to_broadcast">Connect to stream</string>
	<string name="error_connect">Error connect</string>

	<string name="android_client_id">id</string>
	<string name="server_client_id">id</string>
	<string name="client_secret">id</string>
	
	<string name="connect_to_broadcast_info">"Connecting to stream: %s"</string>
	<string name="sign_out">Sign out</string>
	<string name="preferences">Settings</string>
	<string name="settings_dialog_title">Enter a new interval \n(in s)</string>
	<string name="error_connect_title">Error network!</string>
	<string name="error_connect_message">Check your internet connection and try again</string>
	<string name="error">Error</string>
	<string name="error_interval">Invalid message spacing</string>
	<string name="hint">Tap on the message, \nto start voice playback</string>
	<string name="ok">OK</string>
	<string name="attention">Attention!</string>
	<string name="tts_no_install_message">The Google speech synthesizer is not installed on the device or turned off.</string>
	<string name="install">Install</string>
	<string name="cansel">Cancel</string>
	<string name="speech_imposible">Voice playback is not possible.</string>
	<string name="assess_app">Rate app</string>
	<string name="about_app">About app</string>
	<string name="uri_tts">market://details?id=com.google.android.tts</string>
	<string name="uri_speaking_chat">market://details?id=com.maryapc.speakingchat</string>
	<string name="about">The application is designed to communicate with a chat in the stream, if you do something and are not directly behind a computer or phone.</string>
	<string name="author">The idea of ​​creating the application by Alexey Podolyak (trioka.alex). Subscribe to the channel, join friends!</string>
	<string name="url_vk_trioka">https://vk.com/trioka</string>
	<string name="url_youtube_trioka">https://www.youtube.com/channel/UC-2eJuxIs2BxNNuSSlMV9vg</string>
	<string name="send_feedback">Leave feedback on Google Play</string>
	<string name="error_auth">Authorisation error</string>
	<string name="navigation_drawer_open">open</string>
	<string name="navigation_drawer_close">close</string>
	
	<string name="menu_connect">Connect</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_feedback">Feedback</string>
	<string name="menu_sign_out">Sign out</string>
	
	<string name="setting_name_interval">Sets a pause between messages</string>
	<string name="setting_name_interval_small">The interval between short messages</string>
	<string name="setting_name_screen_on">Don\'t off a screen</string>
	<string name="check_settings_broadcast">Check your broadcast settings</string>
</resources>
