<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_menu_connect_broadcast"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:title="@string/menu_connect" />
        <item
            android:id="@+id/drawer_menu_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/drawer_menu_feedback"
            android:icon="@drawable/ic_shop_black_24dp"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/drawer_menu_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_sign_out" />
        </group>
</menu>
