<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<TextView
		android:id="@+id/activity_about_app_text_view_about"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/medium_margin"
		android:text="@string/about" />

	<Button
		android:id="@+id/activity_about_app_button_feedback"
		style="@android:style/Widget.Material.ActionButton"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/small_margin"
		android:text="@string/send_feedback" />

	<TextView
		android:id="@+id/activity_about_app_text_view_author"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/medium_margin"
		android:text="@string/author" />

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/activity_about_app_vk"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:layout_marginLeft="@dimen/medium_margin"
			android:layout_marginRight="@dimen/small_margin"
			android:src="@drawable/vk" />

		<ImageView
			android:id="@+id/activity_about_app_youtube"
			android:layout_width="40dp"
			android:layout_height="40dp"

			android:layout_marginRight="@dimen/medium_margin"
			android:src="@drawable/youtube" />
	</LinearLayout>

</LinearLayout>